[package]
name = "minsweeper-rs"
version = "1.1.5"
edition = "2024"

description = "Rust implementation of minsweeper"

readme = "README.md"
repository = "https://github.com/Canary-Prism/minsweeper-rs"
license = "Apache-2.0"

[dependencies]
#rand = "0.9.2"
fastrand = "2.3.0"
#linked_hash_set = "0.1.6"
hashlink = { version = "0.11.0", optional = true }

[features]
linked-hash-set = ["hashlink"]